# opencode-boomerang

./: .gitignore  .migration-state.json  AGENTS.md  AGENT_SYSTEM_FIX_PLAN.md  ARCHITECTURAL_RECOVERY_PLAN.md  CHANGELOG.md  EXECUTION_PLAN.md  HANDOFF.md  LICENSE  NPM_MIGRATION_PLAN.md  README.md  RESEARCH_REPORT.md  ROADMAP.md  TASKS.md  VANILLA_INSTALL.md  docker-compose.yml  migration-report.txt  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.mjs  vitest.config.ts
.opencode/: boomerang-metrics.jsonl  opencode.json  opencode.json.example  test-metrics.jsonl
agents/: boomerang-architect.md  boomerang-coder.md  boomerang-explorer.md  boomerang-git.md  boomerang-handoff.md  boomerang-init.md  boomerang-linter.md  boomerang-release.md  boomerang-scraper.md  boomerang-tester.md  boomerang-writer.md  boomerang.md  mcp-specialist.md  researcher.md
docs/: API.md  ARCHITECTURE.md  LLM_PROVIDER_GUIDE.md  METRICS.md  MIGRATION-FROM-LEGACY.md  MIGRATION-v0.5-to-v1.0.md  MIGRATION.md  WORKSPACES.md  backlog-architecture.md  deepagents-review.md  npm-publishing.md  super-memory-best-practices.md  super-memory-mcp-update-spec.md  tutorial-script.md
scripts/: cleanup-qdrant-containers.ts  convert-memory-schema.py  install-agents.js  migrate-from-legacy.js  migrate-lancedb-to-qdrant.ts  qdrant-manager.ts  verify-version-sync.js
src/: asset-loader.ts  index.ts  memory-client.ts  memory-service.test.ts  memory-service.ts  orchestrator.ts  server.ts  task-executor.ts
src/memory/: index.ts  (+9 more)
tests/: orchestrator.test.ts  plugin.test.ts  tsconfig.json
(+188 files in other folders)
