[project]
name = "opencode-boomerang"
version = "0.3.0"
description = "Multi-agent orchestration plugin for OpenCode with Boomerang Protocol support"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Veedubin"}]
requires-python = ">=3.10"
dependencies = []

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/Veedubin/opencode-boomerang"
Repository = "https://github.com/Veedubin/opencode-boomerang"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/opencode_boomerang"]

[tool.hatch.build.targets.sdist]
include = ["src"]
